--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="empty_input_number">Input your number!</string>
     <string name="pull_up_input_number">Pull up if you are fed up with random facts</string>
     <string name="pull_down_input_number">Pull down if you want some random facts</string>
+
+    <string name="app_update_ready_title">App ready for update</string>
+    <string name="app_update_yes">Update</string>
+    <string name="app_update_no">Not now</string>
+
 </resources>
