--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="enter_number_hint">Enter your number</string>
     <string name="button_next_number_text">Next number</string>
     <string name="empty_input_number">Input your number!</string>
-    <string name="pull_up_input_number">Pull up if you are fed up with <font color='#0CA4A5'>random facts</font></string>
+    <string name="pull_up_input_number">Pull up if you are <font color='#0CA4A5'>fed up</font> with random facts</string>
     <string name="pull_down_input_number">Pull down if you want some <font color='#0CA4A5'>random facts</font></string>
 
     <string name="number_facts_not_found">For number %s not found facts</string>
